[package]
name = "beeannot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-anyhow = "0.9.1"
axum-template = { version = "3.0.0", features = ["tera"] }
handlebars = "6.3.2"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
sqlx = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
tower = { version = "0.5.2", features = ["tokio", "tokio-stream"] }
